tests/build/fail/widget/malformed_property_type4.stderr
error[E0573]: expected type, found module `zero_ui::properties::margin`
 --> $DIR/malformed_property_type4.rs:8:9
  |
8 |         zero_ui::properties::margin = 10;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a type

error[E0061]: this function takes 2 arguments but 1 argument was supplied
 --> $DIR/malformed_property_type4.rs:8:39
  |
8 |         zero_ui::properties::margin = 10;
  |                                       ^^
  |                                       |
  |                                       supplied 1 argument
  |                                       expected 2 arguments
  |
note: associated function defined here
 --> $DIR/malformed_property_type4.rs:3:1
  |
3 | #[widget($crate::test_widget)]
  | -^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
